--- a/tweeter-server/package.json
+++ b/tweeter-server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.705.0",
+    "@aws-sdk/client-sqs": "^3.699.0",
     "@aws-sdk/lib-dynamodb": "^3.699.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^3.3.1",
@@ -20,6 +21,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.4",
     "@types/bcryptjs": "^2.4.6",
     "typescript": "^5.6.3"
   }
